--- a/VISIONTOOL/CODE/mypage.html
+++ b/VISIONTOOL/CODE/mypage.html
@@ -1,66 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>마이페이지 - 비전툴</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Jua&family=Nanum+Brush+Script&family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
-        <!-- html 코드는 id가 app인 태그 안에서 작업 -->
-        <div id="title">
-            <div id="title-Search">
-                <input type="text" class="inputBox" v-model="search">
-                <span class="material-symbols-outlined search iconSmall" @click="fnSearch">search</span>
+        <header id="header">
+            <div id="title">
+                <div id="WebName">
+                    <a @click="fnMain" class="noDeco">
+                        <span class="material-symbols-outlined logo-icon">construction</span>
+                        <span class="nanum-gothic-regular">비전툴 </span>
+                        <span class="nanum-gothic-extrabold"> VISIONTOOL</span>
+                    </a>
+                </div>
+                <div id="title-Search">
+                    <input type="text" class="inputBox" v-model="search" @keyup.enter="fnSearch" placeholder="검색어를 입력하세요">
+                    <span class="material-symbols-outlined search iconSmall" @click="fnSearch">search</span>
+                </div>
+                <div id="rightBox">
+                    <span class="rightBox-Text" @click="fnLogout">로그아웃</span>
+                    <span class="rightBox-Text" @click="fnMyPage">마이페이지</span>
+                    <span class="material-symbols-outlined rightBox-icon" @click="fnGoCart">shopping_cart</span>
+                </div>
             </div>
-            <div id="WebName">
-                <a @click="fnMain" class="noDeco">
-                    <span class="nanum-gothic-regular">비전툴 </span>  
-                    <span class="nanum-gothic-extrabold"> VISIONTOOL</span>
-                </a>
+        </header>
+
+        <main id="container">
+            <div class="mypage-layout">
+                <nav class="mypage-sidebar">
+                    <ul>
+                        <li><a href="#" @click.prevent="fnMyPage" class="active">내 정보</a></li>
+                        <li><a href="#" @click.prevent="fnEditInfoPage">내 정보 수정</a></li>
+                        <li><a href="#" @click.prevent="fnOrderList">주문 내역</a></li>
+                        <li><a href="#" @click.prevent="fnQNA">문의하기</a></li>
+                    </ul>
+                </nav>
+
+                <div class="mypage-content">
+                    <div class="nanum-gothic-extrabold detailTitle">내 정보</div>
+                    <div class="user-info-box">
+                        <dl class="info-grid">
+                            <dt>아이디</dt>
+                            <dd>{{ info.USER_ID }}</dd>
+
+                            <dt>닉네임</dt>
+                            <dd>{{ info.USERNAME }}</dd>
+
+                            <dt>이메일</dt>
+                            <dd>{{ info.EMAIL }}</dd>
+
+                            <dt>주소</dt>
+                            <dd>{{ info.ADDRESS }}</dd>
+
+                            <dt>휴대폰 번호</dt>
+                            <dd>{{ info.PHONE_NUMBER }}</dd>
+
+                            <dt>가입일</dt>
+                            <dd>{{ formatDate(info.CDATETIME) }}</dd>
+
+                            <dt>최근 정보 수정일</dt>
+                            <dd>{{ formatDate(info.UDATETIME) }}</dd>
+                        </dl>
+                        <div class="info-actions">
+                            <button class="btn btn-primary" @click="fnEditInfoPage">정보 수정하기</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="rightBox">
-                <span class="rightBox-Text" @click="fnLogout">로그아웃 </span>
-                <span class="rightBox-Text" @click="fnMyPage">마이페이지 </span>
-                <span class="material-symbols-outlined rightBox-icon" @click="fnGoCart">shopping_cart</span>
+        </main>
+
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <span class="material-symbols-outlined iconSmall">call</span>
+                    <span>032-515-8024</span>
+                </div>
+                <div class="footer-info">
+                    <span class="material-symbols-outlined">location_on</span>
+                    <span>인천광역시 부평구 길주로 416-4 (산곡동 119-33)</span>
+                </div>
+                 <div class="footer-info">
+                    <span>(주)비전툴</span>
+                </div>
             </div>
-        </div>
-        <div id="left_container">
-            <div class="bigLineSpace cursor" @click="fnMyPage">내 정보</div>
-            <div class="bigLineSpace cursor" @click="fnEditInfoPage">내 정보 수정</div>
-            <div class="bigLineSpace cursor" @click="fnOrderList">주문 내역</div>
-            <div class="bigLineSpace cursor" @click="fnQNA">문의 하기</div>
-        </div>
-        <div id="container">
-            <div class="nanum-gothic-extrabold detailTitle">내 정보</div>
-            <div class="USERBox">
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">아이디 :</span> {{info.USER_ID}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">닉네임 :</span> {{info.USERNAME}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">이메일 :</span> {{info.EMAIL}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">주 소 :</span> {{info.ADDRESS}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">휴대폰 :</span> {{info.PHONE_NUMBER}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">가입일 :</span> {{info.CDATETIME}}</div>
-                <div class="lineSpace nanum-gothic-regular"><span class="bold">최근 정보 수정일 :</span> {{info.UDATETIME}}</div>
-                <div style="text-align: right;"><button @click="fnEditInfoPage">정보 수정하기</button></div>
-            </div>
-        </div>
-        <div class="footer gray">
-            <div>
-                <span class="material-symbols-outlined iconSmall">call</span>
-                032-515-8024
-            </div>
-            <div>
-                <span class="material-symbols-outlined">location_on</span>
-                길주로 416-4 (길주로 416-4) 지번 : 산곡동 119-33
-            </div>
-        </div>
+        </footer>
     </div>
 </body>
 </html>
@@ -69,71 +102,47 @@
     const app = Vue.createApp({
         data() {
             return {
-                // 변수 - (key : value)
-                loginFlg : true,
-                userId : "",
-                info : {},
-                search : ""
+                userId: "",
+                info: {},
+                search: ""
             };
         },
         methods: {
-            // 함수(메소드) - (key : function())
-            fnInfo: function () {
+            fnInfo() {
                 let self = this;
-                let param = {
-                    userId : self.userId
-                };
                 $.ajax({
-                    url: "http://localhost:3009/tools/checkid",
+                    url: `http://localhost:3009/tools/checkid?userId=${self.userId}`,
                     dataType: "json",
                     type: "GET",
-                    data: param,
                     success: function (data) {
                         self.info = data.info;
                     }
                 });
             },
-            fnEditInfoPage(){
-                let self = this;
-                location.href=`edit-user.html?userId=${self.userId}`;
+            formatDate(datetime) {
+                if (!datetime) return '정보 없음';
+                // 날짜만 표시 (YYYY-MM-DD 형식)
+                return datetime.split('T')[0];
             },
-            fnMyPage(){
-                let self = this;
-                location.href=`mypage.html?userId=${self.userId}&loginFlg=${self.loginFlg}`;
-            },
-            fnOrderList(){
-                let self = this;
-                location.href=`order-list.html?userId=${self.userId}`;
-            },
-            fnQNA(){
-                let self = this;
-                location.href=`user-qna.html?userId=${self.userId}`;
-            },
-            fnLogout(){
-                location.href="main.html";
-            },
-            fnMain(){
-                let self = this;
-                location.href=`main.html?userId=${self.userId}`;
-            },
-            fnGoCart(){
-                let self = this;
-                location.href=`cart-list.html?userId=${self.userId}`;
-            },
-            fnSearch(){
-                let self = this;
-                location.href=`toolList.html?userId=${self.userId}&search=${self.search}`
-            }
-        }, // methods
+            fnEditInfoPage() { location.href = `edit-user.html?userId=${this.userId}`; },
+            fnMyPage() { location.href = `mypage.html?userId=${this.userId}`; },
+            fnOrderList() { location.href = `order-list.html?userId=${this.userId}`; },
+            fnQNA() { location.href = `user-qna.html?userId=${this.userId}`; },
+            fnLogout() { location.href = "main.html"; },
+            fnMain() { location.href = `main.html?userId=${this.userId}`; },
+            fnGoCart() { location.href = `cart-list.html?userId=${this.userId}`; },
+            fnSearch() { location.href = `toolList.html?userId=${this.userId}&search=${this.search}`; }
+        },
         mounted() {
-            // 처음 시작할 때 실행되는 부분
-            let self = this;
             const queryParams = new URLSearchParams(window.location.search);
-            self.userId = queryParams.get('userId') || '';
-            self.loginFlg = queryParams.get('loginFlg') || false;
-            self.fnInfo();            
+            this.userId = queryParams.get('userId') || '';
+            if (!this.userId) {
+                alert('로그인이 필요한 서비스입니다.');
+                location.href = 'login.html';
+                return;
+            }
+            this.fnInfo();
         }
     });
-
     app.mount('#app');
 </script>
